--- a/public/admin.html
+++ b/public/admin.html
@@ -1,174 +1,164 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>後台管理系統 - Stock Tracker</title>
-    <!-- 引入 Bootstrap 美化介面 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body { background-color: #f4f6f9; }
-        .login-card { max-width: 400px; margin: 100px auto; padding: 30px; background: white; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        .dashboard { display: none; padding: 20px; }
-        .status-badge { font-size: 0.8em; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>後台管理系統 - Stock Tracker</title>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body { background-color: #f4f6f9; }
+    .login-card {
+      max-width: 400px;
+      margin: 100px auto;
+      padding: 30px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    .dashboard { display: none; padding: 20px; }
+  </style>
 </head>
 <body>
 
-    <!-- 1. 登錄介面 -->
-    <div id="loginSection" class="container">
-        <div class="login-card">
-            <h3 class="text-center mb-4">管理員登錄</h3>
-            <div class="mb-3">
-                <label class="form-label">帳號</label>
-                <input type="text" id="username" placeholder="請輸入帳號" class="...">
-            </div>
-            <div class="mb-3">
-                <label class="form-label">密碼</label>
-                <input type="password" id="password" placeholder="請輸入密碼" class="...">
-            </div>
-            <button onclick="handleLogin()" class="btn btn-primary w-100">登錄系統</button>
-            <p id="loginError" class="text-danger mt-2 text-center" style="display:none;">帳號或密碼錯誤</p>
-        </div>
+  <!-- 1. 登錄介面 -->
+  <div id="loginSection" class="container">
+    <div class="login-card">
+      <h3 class="text-center mb-4">管理員登錄</h3>
+
+      <div class="mb-3">
+        <label class="form-label">帳號</label>
+        <input type="text" id="username" placeholder="請輸入帳號" class="form-control">
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">密碼</label>
+        <input type="password" id="password" placeholder="請輸入密碼" class="form-control">
+      </div>
+
+      <button onclick="handleLogin()" class="btn btn-primary w-100">登錄系統</button>
+      <p id="loginError" class="text-danger mt-2 text-center" style="display:none;">帳號或密碼錯誤</p>
+    </div>
+  </div>
+
+  <!-- 2. 儀表板（登入後顯示） -->
+  <div id="dashboardSection" class="dashboard container-fluid">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2>📊 用戶持倉數據總覽</h2>
+      <button onclick="logout()" class="btn btn-outline-danger">退出登錄</button>
     </div>
 
-    <!-- 2. 數據儀表板 (登錄後顯示) -->
-    <div id="dashboardSection" class="dashboard container-fluid">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-            <h2>📊 用戶持倉數據總覽</h2>
-            <button onclick="logout()" class="btn btn-outline-danger">退出登錄</button>
+    <div class="card">
+      <div class="card-body">
+        <button onclick="fetchData()" class="btn btn-success mb-3">🔄 刷新數據</button>
+        <div class="table-responsive">
+          <table class="table table-hover table-striped">
+            <thead class="table-dark">
+              <tr>
+                <th>客戶姓名</th>
+                <th>股票名稱</th>
+                <th>代碼</th>
+                <th>持股數</th>
+                <th>買入價</th>
+                <th>止損價</th>
+                <th>提交時間</th>
+                <th>操作</th>
+              </tr>
+            </thead>
+            <tbody id="tableBody">
+              <!-- 資料動態插入 -->
+            </tbody>
+          </table>
         </div>
-
-        <div class="card">
-            <div class="card-body">
-                <button onclick="fetchData()" class="btn btn-success mb-3">🔄 刷新數據</button>
-                <div class="table-responsive">
-                    <table class="table table-hover table-striped">
-                        <thead class="table-dark">
-                            <tr>
-                                <th>客戶姓名</th>
-                                <th>股票名稱</th>
-                                <th>代碼</th>
-                                <th>持股數</th>
-                                <th>買入價</th>
-                                <th>止損價</th>
-                                <th>提交時間</th>
-                                <th>操作</th>
-                            </tr>
-                        </thead>
-                        <tbody id="tableBody">
-                            <!-- 數據會插入這裡 -->
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+  </div>
 
-    <script>
-        // 🟢 [關鍵修改] 這裡定義你的 Render 後端網址
-        // 注意：不要在最後面加斜線 '/'
-        const API_URL = 'https://taigu003.onrender.com/api';
+  <script>
+    // 後端 API 根路徑（Render）
+    const API_BASE = '/api'; // 同網域，寫相對路徑即可
 
-        // 檢查是否已登錄
-        if (localStorage.getItem('adminToken')) {
-            showDashboard();
-        }
-
-        // 處理登錄
-       async function handleLogin() {
-  const username = document.getElementById('username').value.trim();
-  const password = document.getElementById('password').value.trim();
-
-  try {
-    const response = await fetch('/api/admin/login', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ username, password })
-    });
-
-    const result = await response.json();
-
-    if (result.success) {
-      // 登入成功，保存 token，切換畫面
-      localStorage.setItem('adminToken', result.token);
-      // 例如：顯示主畫面、載入資料
-      // loadDashboard();
-      alert('登入成功');
-    } else {
-      document.getElementById('loginError').innerText = result.message || '帳號或密碼錯誤';
+    // 如果已登入，直接顯示儀表板
+    if (localStorage.getItem('adminToken')) {
+      showDashboard();
     }
-  } catch (err) {
-    document.getElementById('loginError').innerText = '登入失敗，請稍後再試';
-  }
-}
 
-        // 顯示儀表板並獲取數據
-        function showDashboard() {
-            document.getElementById('loginSection').style.display = 'none';
-            document.getElementById('dashboardSection').style.display = 'block';
-            fetchData();
+    // 登入處理（帳號、密碼固定：admin / Qq112233.）
+    async function handleLogin() {
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const errorEl = document.getElementById('loginError');
+
+      errorEl.style.display = 'none';
+      errorEl.textContent = '';
+
+      try {
+        const res = await fetch(`${API_BASE}/admin/login`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ username, password })
+        });
+
+        const result = await res.json();
+
+        if (result.success) {
+          localStorage.setItem('adminToken', result.token || 'admin-fixed-token');
+          showDashboard();
+        } else {
+          errorEl.textContent = result.message || '帳號或密碼錯誤';
+          errorEl.style.display = 'block';
+        }
+      } catch (e) {
+        errorEl.textContent = '登入失敗，請稍後再試';
+        errorEl.style.display = 'block';
+      }
+    }
+
+    function showDashboard() {
+      document.getElementById('loginSection').style.display = 'none';
+      document.getElementById('dashboardSection').style.display = 'block';
+      fetchData();
+    }
+
+    function logout() {
+      localStorage.removeItem('adminToken');
+      document.getElementById('dashboardSection').style.display = 'none';
+      document.getElementById('loginSection').style.display = 'block';
+    }
+
+    // 取得資料（根據你原本的 API 路由簡化示意）
+    async function fetchData() {
+      const tbody = document.getElementById('tableBody');
+      tbody.innerHTML = '<tr><td colspan="8" class="text-center">載入中...</td></tr>';
+
+      try {
+        const res = await fetch(`${API_BASE}/get_data`);
+        const data = await res.json();
+
+        if (!Array.isArray(data) || data.length === 0) {
+          tbody.innerHTML = '<tr><td colspan="8" class="text-center">目前沒有資料</td></tr>';
+          return;
         }
 
-        // 獲取 MongoDB 數據
-        async function fetchData() {
-            try {
-                const res = await fetch(`${API_URL}/stocks`);
-                const stocks = await res.json();
-                renderTable(stocks);
-            } catch (err) {
-                console.error(err);
-                // alert('獲取數據失敗'); // 暫時關閉彈窗以免打擾
-            }
-        }
-
-        // 渲染表格
-        function renderTable(data) {
-            const tbody = document.getElementById('tableBody');
-            tbody.innerHTML = '';
-
-            if (data.length === 0) {
-                tbody.innerHTML = '<tr><td colspan="8" class="text-center">目前沒有數據</td></tr>';
-                return;
-            }
-
-            data.forEach(item => {
-                const date = new Date(item.date).toLocaleString('zh-TW');
-                const row = `
-                    <tr>
-                        <td class="fw-bold">${item.client || '-'}</td>
-                        <td>${item.name}</td>
-                        <td><span class="badge bg-info text-dark">${item.code}</span></td>
-                        <td>${item.shares}</td>
-                        <td>$${item.price}</td>
-                        <td class="text-danger">${item.stopLoss || '-'}</td>
-                        <td class="text-muted small">${date}</td>
-                        <td>
-                            <button onclick="deleteItem('${item._id}')" class="btn btn-sm btn-danger">刪除</button>
-                        </td>
-                    </tr>
-                `;
-                tbody.innerHTML += row;
-            });
-        }
-
-        // 刪除功能
-        async function deleteItem(id) {
-            if(!confirm('確定要刪除這條記錄嗎？')) return;
-            
-            try {
-                await fetch(`${API_URL}/stocks/${id}`, { method: 'DELETE' });
-                fetchData(); // 重新刷新
-            } catch (err) {
-                alert('刪除失敗');
-            }
-        }
-
-        // 登出
-        function logout() {
-            localStorage.removeItem('adminToken');
-            location.reload();
-        }
-    </script>
+        tbody.innerHTML = '';
+        data.forEach(row => {
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td>${row.client || ''}</td>
+            <td>${row.stockName || ''}</td>
+            <td>${row.code || ''}</td>
+            <td>${row.quantity ?? ''}</td>
+            <td>${row.cost ?? ''}</td>
+            <td>${row.stopLoss ?? ''}</td>
+            <td>${row.createdAt ? new Date(row.createdAt).toLocaleString() : ''}</td>
+            <td><button class="btn btn-sm btn-outline-primary" disabled>查看</button></td>
+          `;
+          tbody.appendChild(tr);
+        });
+      } catch (e) {
+        tbody.innerHTML = '<tr><td colspan="8" class="text-center text-danger">載入失敗</td></tr>';
+      }
+    }
+  </script>
 </body>
 </html>
