--- a/public/admin.html
+++ b/public/admin.html
@@ -54,9 +54,7 @@
       background: #111827;
     }
 
-    .search-input {
-      max-width: 260px;
-    }
+    .search-input { max-width: 220px; }
 
     .client-group-card {
       border-radius: 10px;
@@ -74,8 +72,17 @@
       font-size: 14px;
     }
     .client-group-body { padding: 8px 12px; }
-
     .view-toggle .btn { font-size: 13px; }
+
+    /* 讓「客戶姓名」看起來可點擊 */
+    .client-link {
+      cursor: pointer;
+      color: #2563eb;
+      text-decoration: underline;
+    }
+    .client-link:hover {
+      color: #1d4ed8;
+    }
   </style>
 </head>
 <body>
@@ -100,7 +107,7 @@
     </div>
   </div>
 
-  <!-- 2. 儀表板（登入後顯示） -->
+  <!-- 2. 儀表板 -->
   <div id="dashboardSection" class="dashboard container-fluid">
     <!-- 頂部條 -->
     <div class="page-header d-flex justify-content-between align-items-center flex-wrap gap-2">
@@ -109,8 +116,17 @@
         <small class="text-muted" id="lastFetchTime"></small>
       </div>
       <div class="d-flex align-items-center gap-2 flex-wrap">
+
+        <!-- 搜尋 -->
         <input type="text" id="searchInput" class="form-control form-control-sm search-input"
                placeholder="搜尋股票名稱 / 代碼">
+
+        <!-- 排序欄位 -->
+        <select id="sortSelect" class="form-select form-select-sm" style="width:auto; min-width:160px;">
+          <option value="time_desc">按提交時間（新 → 舊）</option>
+          <option value="value_desc">按估算市值（大 → 小）</option>
+          <option value="value_asc">按估算市值（小 → 大）</option>
+        </select>
 
         <div class="btn-group btn-group-sm view-toggle" role="group" aria-label="View toggle">
           <button type="button" class="btn btn-outline-secondary active" id="btnViewTable"
@@ -119,7 +135,7 @@
                   onclick="setViewMode('client')">依客戶分組</button>
         </div>
 
-        <!-- 自動刷新開關 -->
+        <!-- 自動刷新 -->
         <div class="form-check form-switch ms-1">
           <input class="form-check-input" type="checkbox" id="autoRefreshSwitch">
           <label class="form-check-label small" for="autoRefreshSwitch">自動刷新(10秒)</label>
@@ -200,18 +216,14 @@
                       <th>操作</th>
                     </tr>
                   </thead>
-                  <tbody id="tableBody">
-                    <!-- 資料動態插入 -->
-                  </tbody>
+                  <tbody id="tableBody"></tbody>
                 </table>
               </div>
             </div>
 
             <!-- 客戶分組視圖 -->
             <div id="clientView" style="display:none;">
-              <div id="clientGroupContainer">
-                <!-- 客戶群組動態插入 -->
-              </div>
+              <div id="clientGroupContainer"></div>
             </div>
           </div>
         </div>
@@ -240,11 +252,28 @@
         <div class="stat-card">
           <h6 class="mb-2">💡 小提示</h6>
           <small class="text-muted">
-            ‧ 勾選「自動刷新」後，每 10 秒更新一次股價與收益率<br>
-            ‧ 搜尋框可輸入股票名稱或代碼<br>
-            ‧ Tab 可切換「推薦飆股」與「非推薦」<br>
-            ‧ 統計用「即時價 × 股數」估算，不含手續費、稅費
+            ‧ 點「客戶姓名」可查看完整錄入資訊<br>
+            ‧ 排序欄可按估算市值大小排列<br>
+            ‧ 勾選「自動刷新」每 10 秒更新股價與收益率
           </small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 3. 客戶詳細資訊彈窗 -->
+  <div class="modal fade" id="clientDetailModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">客戶詳細資訊</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="關閉"></button>
+        </div>
+        <div class="modal-body">
+          <div id="clientDetailBody"><!-- JS 動態填入 --></div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
         </div>
       </div>
     </div>
@@ -260,7 +289,8 @@
     let viewMode = 'table';    // 'table' or 'client'
     let filterType = 'all';    // 'all' | 'rec' | 'normal'
     let searchText = '';       // 搜尋文字
-    let autoRefreshTimer = null; // 自動刷新計時器
+    let autoRefreshTimer = null;
+    let sortMode = 'time_desc'; // 排序模式
 
     // 已登入則直接進入儀表板
     if (localStorage.getItem('adminToken')) {
@@ -336,19 +366,23 @@
       render();
     }
 
-    // 搜尋框
+    // 搜尋
     document.getElementById('searchInput').addEventListener('input', (e) => {
       searchText = e.target.value.trim().toLowerCase();
+      render();
+    });
+
+    // 排序變更
+    document.getElementById('sortSelect').addEventListener('change', (e) => {
+      sortMode = e.target.value;
       render();
     });
 
     // 自動刷新開關
     document.getElementById('autoRefreshSwitch').addEventListener('change', (e) => {
       if (e.target.checked) {
-        // 立刻抓一次
-        fetchData();
-        // 每 10 秒自動更新
-        autoRefreshTimer = setInterval(fetchData, 10000);
+        fetchData();                          // 立刻抓一次
+        autoRefreshTimer = setInterval(fetchData, 10000); // 每 10 秒自動抓
       } else {
         if (autoRefreshTimer) {
           clearInterval(autoRefreshTimer);
@@ -361,7 +395,7 @@
       if (autoRefreshTimer) clearInterval(autoRefreshTimer);
     });
 
-    // 抓資料 + 即時股價
+    // 抓資料 + 股價
     async function fetchData() {
       const tbody = document.getElementById('tableBody');
       const clientContainer = document.getElementById('clientGroupContainer');
@@ -369,14 +403,13 @@
       clientContainer.innerHTML = '<div class="text-center text-muted">載入中...</div>';
 
       try {
-        // 1. 抓持倉資料
         const res = await fetch(`${API_BASE}/get_data`);
         const data = await res.json();
         const list = Array.isArray(data) ? data : [];
 
-        let tempData = list.sort((a, b) => new Date(b.createdAt) - new Date(a.createdAt));
+        let tempData = list;
 
-        // 2. 抓股價
+        // 取所有代碼去抓即時價
         const codes = [...new Set(tempData.map(r => r.code).filter(Boolean))];
 
         if (codes.length > 0) {
@@ -411,9 +444,9 @@
       }
     }
 
-    // 欄位過濾
-    function getFilteredData() {
-      return allData.filter(row => {
+    // 過濾 + 排序
+    function getFilteredAndSortedData() {
+      let data = allData.filter(row => {
         if (filterType === 'rec' && row.recommendType !== 'yes') return false;
         if (filterType === 'normal' && row.recommendType === 'yes') return false;
 
@@ -424,11 +457,33 @@
         }
         return true;
       });
+
+      data.sort((a, b) => {
+        const qtyA = Number(a.quantity) || 0;
+        const costA = Number(a.cost) || 0;
+        const curA  = Number(a.currentPrice ?? a.cost) || 0;
+        const valueA = qtyA * curA;
+
+        const qtyB = Number(b.quantity) || 0;
+        const costB = Number(b.cost) || 0;
+        const curB  = Number(b.currentPrice ?? b.cost) || 0;
+        const valueB = qtyB * curB;
+
+        if (sortMode === 'value_desc') {
+          return valueB - valueA;
+        } else if (sortMode === 'value_asc') {
+          return valueA - valueB;
+        } else { // time_desc
+          return new Date(b.createdAt || 0) - new Date(a.createdAt || 0);
+        }
+      });
+
+      return data;
     }
 
-    // 統計 + 重繪畫面
+    // 主渲染
     function render() {
-      const data = getFilteredData();
+      const data = getFilteredAndSortedData();
       const tbody = document.getElementById('tableBody');
       const clientContainer = document.getElementById('clientGroupContainer');
 
@@ -454,7 +509,6 @@
       document.getElementById('statQty').textContent   = totalQty.toLocaleString('zh-TW');
       document.getElementById('statCost').textContent  = totalCostAmount.toLocaleString('zh-TW', { maximumFractionDigits: 0 });
       document.getElementById('statRecCount').textContent = recCount;
-
       document.getElementById('statValue').textContent = totalValue.toLocaleString('zh-TW', { maximumFractionDigits: 0 });
 
       const totalPnl = totalValue - totalCostAmount;
@@ -494,7 +548,12 @@
 
             const tr = document.createElement('tr');
             tr.innerHTML = `
-              <td>${row.client || ''}</td>
+              <td>
+                <span class="client-link"
+                      onclick='showClientDetail(${JSON.stringify(row).replace(/'/g,"&#39;")})'>
+                  ${row.client || ''}
+                </span>
+              </td>
               <td>${row.stockName || ''}</td>
               <td>${row.code || ''}</td>
               <td class="text-end">${qty.toLocaleString('zh-TW')}</td>
@@ -615,6 +674,87 @@
       }
     }
 
+    // 顯示客戶詳情（彈窗）
+    function showClientDetail(row) {
+      const body = document.getElementById('clientDetailBody');
+
+      const qty  = Number(row.quantity) || 0;
+      const cost = Number(row.cost) || 0;
+      const cur  = Number(row.currentPrice ?? row.cost) || 0;
+      const value = qty * cur;
+      const pnl   = qty * (cur - cost);
+      const rate  = cost > 0 ? (cur - cost) / cost * 100 : 0;
+
+      let html = `
+        <div class="mb-3">
+          <h6>基本資料</h6>
+          <table class="table table-sm">
+            <tbody>
+              <tr><th style="width:130px;">客戶姓名</th><td>${row.client || ''}</td></tr>
+              <tr><th>聯絡電話</th><td>${row.phone || row.tel || row.contact || ''}</td></tr>
+              <tr><th>備註</th><td>${row.note || row.remark || ''}</td></tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="mb-3">
+          <h6>股票資訊</h6>
+          <table class="table table-sm">
+            <tbody>
+              <tr><th style="width:130px;">股票名稱</th><td>${row.stockName || ''}</td></tr>
+              <tr><th>股票代碼</th><td>${row.code || ''}</td></tr>
+              <tr><th>是否推薦</th><td>${row.recommendType === 'yes' ? '推薦飆股' : '一般'}</td></tr>
+              <tr><th>提交時間</th><td>${row.createdAt ? new Date(row.createdAt).toLocaleString() : ''}</td></tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="mb-3">
+          <h6>持倉與損益</h6>
+          <table class="table table-sm">
+            <tbody>
+              <tr><th style="width:130px;">持股數量</th><td>${qty.toLocaleString('zh-TW')}</td></tr>
+              <tr><th>買入成本</th><td>${cost}</td></tr>
+              <tr><th>即時股價</th><td>${cur}</td></tr>
+              <tr><th>估算市值</th><td>${value ? value.toLocaleString('zh-TW',{maximumFractionDigits:0}) : ''}</td></tr>
+              <tr><th>估算盈虧</th><td>${pnl ? ((pnl>=0?'+':'') + pnl.toFixed(0)) : '0'}</td></tr>
+              <tr><th>報酬率</th><td>${cost>0 ? ((rate>=0?'+':'') + rate.toFixed(2) + '%') : '-'}</td></tr>
+            </tbody>
+          </table>
+        </div>
+      `;
+
+      // 其他欄位自動列出，避免漏掉表單自訂欄位
+      const knownKeys = new Set([
+        '_id','client','phone','tel','contact','note','remark',
+        'stockName','code','recommendType','createdAt',
+        'quantity','cost','currentPrice','userId','__v'
+      ]);
+
+      const extraEntries = Object.entries(row)
+        .filter(([k, v]) => !knownKeys.has(k) && v !== null && v !== undefined && v !== '');
+
+      if (extraEntries.length) {
+        html += `
+          <div class="mb-3">
+            <h6>其他欄位</h6>
+            <table class="table table-sm">
+              <tbody>
+                ${extraEntries.map(([k, v]) =>
+                  `<tr><th style="width:130px;">${k}</th><td>${String(v)}</td></tr>`
+                ).join('')}
+              </tbody>
+            </table>
+          </div>
+        `;
+      }
+
+      body.innerHTML = html;
+
+      const modal = new bootstrap.Modal(document.getElementById('clientDetailModal'));
+      modal.show();
+    }
+
     // 刪除
     async function deleteRow(id, client, code) {
       if (!confirm(`確定要刪除 ${client || ''} / ${code || ''} 這筆持倉嗎？`)) return;
@@ -624,7 +764,7 @@
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({
-            userId: 'admin_view', // 如後端需要 userId，可在後端特別處理
+            userId: 'admin_view',
             client,
             code
           })
@@ -639,7 +779,7 @@
 
     // 匯出 CSV
     function exportCSV() {
-      const data = getFilteredData();
+      const data = getFilteredAndSortedData();
       if (!data.length) {
         alert('目前沒有可匯出的資料');
         return;
