--- a/public/admin.html
+++ b/public/admin.html
@@ -205,6 +205,90 @@
       background:#f9fafb;
       margin-right:4px;
     }
+
+    /* ====== 客戶詳細 Modal 內的持倉卡片（前端風格） ====== */
+    .client-summary-card {
+      border-radius: 12px;
+      padding: 10px 14px;
+      background: #ecfdf5;
+      border: 1px solid #bbf7d0;
+      color: #065f46;
+      margin-bottom: 10px;
+      font-size: 13px;
+    }
+    .client-summary-card .title {
+      font-weight: 700;
+      margin-bottom: 4px;
+    }
+    .client-summary-card .pnl-positive {
+      color: #16a34a;
+      font-weight: 700;
+    }
+    .client-summary-card .pnl-negative {
+      color: #b91c1c;
+      font-weight: 700;
+    }
+
+    .client-holdings-wrapper {
+      border-radius: 12px;
+      border: 1px solid #e5e7eb;
+      overflow: hidden;
+    }
+
+    .holding-row-card {
+      display: grid;
+      grid-template-columns: 1.6fr 0.9fr 0.9fr 0.9fr 0.9fr 1fr 1fr 1fr;
+      gap: 8px;
+      padding: 8px 10px;
+      border-bottom: 1px solid #e5e7eb;
+      align-items: center;
+      font-size: 12px;
+    }
+    .holding-row-card.header {
+      font-size: 11px;
+      font-weight: 600;
+      color: #6b7280;
+      background: #f9fafb;
+    }
+    .holding-row-card.body {
+      background: #ffffff;
+    }
+    .holding-row-card.body:nth-child(even) {
+      background: #f9fafb;
+    }
+
+    .badge-tag {
+      display: inline-block;
+      padding: 2px 8px;
+      border-radius: 999px;
+      font-size: 11px;
+      font-weight: 500;
+    }
+    .badge-tag.rec {
+      background: #eff6ff;
+      color: #1d4ed8;
+    }
+    .badge-tag.normal {
+      background: #f3f4f6;
+      color: #4b5563;
+    }
+
+    .badge-pnl-up {
+      background: #dcfce7;
+      color: #166534;
+      border-radius: 999px;
+      padding: 2px 8px;
+      font-size: 11px;
+      font-weight: 600;
+    }
+    .badge-pnl-down {
+      background: #fee2e2;
+      color: #b91c1c;
+      border-radius: 999px;
+      padding: 2px 8px;
+      font-size: 11px;
+      font-weight: 600;
+    }
   </style>
 </head>
 <body>
@@ -774,56 +858,85 @@
         </div>
       `;
 
+      // 客戶整體投入 / 盈虧
+      const totalCostClient = clientGroup.totalCost;
+      const totalValueClient = clientGroup.totalValue;
+      const totalPnlClient = totalValueClient - totalCostClient;
+      const totalRateClient = totalCostClient > 0 ? totalPnlClient / totalCostClient * 100 : 0;
+
       const holdingsHtml = `
         <div class="mb-2">
           <h6 class="mb-2">持倉明細（共 ${clientGroup.holdings.length} 檔）</h6>
-          <div class="table-responsive">
-            <table class="table table-sm align-middle">
-              <thead>
-                <tr>
-                  <th>股票名稱</th>
-                  <th>代碼</th>
-                  <th class="text-end">數量</th>
-                  <th class="text-end">成本</th>
-                  <th class="text-end">即時價</th>
-                  <th class="text-end">市值</th>
-                  <th class="text-end">盈虧</th>
-                  <th>類型</th>
-                  <th>提交時間</th>
-                </tr>
-              </thead>
-              <tbody>
-                ${clientGroup.holdings.map(r => {
-                  const qty  = Number(r.quantity) || 0;
-                  const cost = Number(r.cost) || 0;
-                  const cur  = Number(r.currentPrice ?? r.cost) || 0;
-                  const value = qty * cur;
-                  const pnl   = qty * (cur - cost);
-                  const rate  = cost > 0 ? (cur - cost) / cost * 100 : 0;
-                  const badgeClass = pnl >= 0 ? 'badge-up' : 'badge-down';
-                  const rateStr = cost > 0 ? ((rate>=0?'+':'')+rate.toFixed(2)+'%') : '-';
-                  return `
-                    <tr>
-                      <td>${r.stockName || ''}</td>
-                      <td>${r.code || ''}</td>
-                      <td class="text-end">${qty.toLocaleString('zh-TW')}</td>
-                      <td class="text-end">${cost || ''}</td>
-                      <td class="text-end">${cur || ''}</td>
-                      <td class="text-end">${value ? value.toLocaleString('zh-TW',{maximumFractionDigits:0}) : ''}</td>
-                      <td class="text-end">
-                        ${pnl
-                          ? `<span class="badge ${badgeClass}">${(pnl>=0?'+':'')+pnl.toFixed(0)} (${rateStr})</span>`
-                          : ''}
-                      </td>
-                      <td>${r.recommendType === 'yes'
-                            ? '<span class="badge bg-primary">推薦</span>'
-                            : '<span class="badge bg-secondary">一般</span>'}</td>
-                      <td>${r.createdAt ? new Date(r.createdAt).toLocaleString() : ''}</td>
-                    </tr>
-                  `;
-                }).join('')}
-              </tbody>
-            </table>
+
+          <!-- 上方 summary 條 -->
+          <div class="client-summary-card">
+            <div class="title">
+              ${clientGroup.client || ''} |
+              投入 NT$ ${totalCostClient.toLocaleString('zh-TW', { maximumFractionDigits: 0 })} |
+              盈虧
+              <span class="${totalPnlClient >= 0 ? 'pnl-positive' : 'pnl-negative'}">
+                NT$ ${(totalPnlClient >= 0 ? '+' : '') + totalPnlClient.toFixed(0)}
+                ${totalCostClient > 0
+                  ? ` (${(totalRateClient >= 0 ? '+' : '') + totalRateClient.toFixed(2)}%)`
+                  : ''}
+              </span>
+            </div>
+            <div style="font-size:12px;color:#6b7280;">
+              股票檔數：${clientGroup.holdings.length} 檔｜
+              總持股數：${clientGroup.totalQty.toLocaleString('zh-TW')} 股｜
+              總市值：NT$ ${totalValueClient.toLocaleString('zh-TW', { maximumFractionDigits: 0 })}
+            </div>
+          </div>
+
+          <!-- 下方每檔持股 -->
+          <div class="client-holdings-wrapper mt-2">
+            <div class="holding-row-card header">
+              <div>股票 / 標籤</div>
+              <div>代碼</div>
+              <div class="text-end">數量</div>
+              <div class="text-end">成本價</div>
+              <div class="text-end">即時價</div>
+              <div class="text-end">市值</div>
+              <div class="text-end">盈虧</div>
+              <div class="text-end">報酬率</div>
+            </div>
+
+            ${clientGroup.holdings.map(r => {
+              const qty  = Number(r.quantity) || 0;
+              const cost = Number(r.cost) || 0;
+              const cur  = Number(r.currentPrice ?? r.cost) || 0;
+              const value = qty * cur;
+              const pnl   = qty * (cur - cost);
+              const rate  = cost > 0 ? (cur - cost) / cost * 100 : 0;
+              const rateStr = cost > 0 ? ((rate>=0?'+':'')+rate.toFixed(2)+'%') : '-';
+              const pnlClass = pnl >= 0 ? 'badge-pnl-up' : 'badge-pnl-down';
+
+              const typeTag = r.recommendType === 'yes'
+                ? '<span class="badge-tag rec">推薦</span>'
+                : '<span class="badge-tag normal">一般</span>';
+
+              return `
+                <div class="holding-row-card body">
+                  <div>
+                    <div>${r.stockName || ''}</div>
+                    <div>${typeTag}</div>
+                  </div>
+                  <div>${r.code || ''}</div>
+                  <div class="text-end">${qty.toLocaleString('zh-TW')}</div>
+                  <div class="text-end">${cost || ''}</div>
+                  <div class="text-end">${cur || ''}</div>
+                  <div class="text-end">
+                    ${value ? value.toLocaleString('zh-TW',{maximumFractionDigits:0}) : ''}
+                  </div>
+                  <div class="text-end">
+                    ${pnl
+                      ? `<span class="${pnlClass}">${(pnl>=0?'+':'')+pnl.toFixed(0)}</span>`
+                      : '-'}
+                  </div>
+                  <div class="text-end">${rateStr}</div>
+                </div>
+              `;
+            }).join('')}
           </div>
         </div>
       `;
